--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -8,6 +8,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ConnectDB": "Server=PCNTT-HPDQ34864\\DAT2025;Database=QLThietBi;User ID=sa;Password=Ronaldat@2026;TrustServerCertificate=True"
+    "ConnectDB": "Server=NMCD2-HPDQ34864\\DAT2025;Database=QLThietBi;User ID=sa;Password=Ronaldat@2026;TrustServerCertificate=True"
+  },
+
+  "Jwt": {
+    "Key": "levandathpdqnthusaugaysauthangsaunamhaikhonghailam",
+    "Issuer": "yourapp"
   }
 }
